OLMIS-3135: Removed ApiKey entity
There was a circular dependency between auth and reference data services.
The auth service needed a service account id to create an instance of
ApiKey but in the same time the reference data service needed a generated
API key to create service account entity.
